--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <main class="content-area">
             <div class="search-bar col-md-6 mx-auto">
-                <h1 class="text-center">Hard Rock Lyric Search</h1>
+                 <h1 class="text-center banner-text">Hard Rock Lyric Search</h1>
                 <div class="search-box my-5">
-                    <input id="search-field" type="text" class="form-control" placeholder="Enter your artist song name">
-                    <button id="enter" onclick="searchSongs()" class="btn btn-success search-btn">Search</button>
+                    <input id="search-field" type="text" class="form-control" placeholder="Enter your favourite song name">
+                    <button id="enter" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
             <!-- Single Lyrics -->
